--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 APP_NAME=OTP Verification
 PORT=8000
-DATABASE='mongodb+srv://newsadmin:Jhaaayush303%40@indianews.osaxh.mongodb.net/OTP?authSource=admin&replicaSet=atlas-g9tl43-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true'
+DATABASE='mongoDB URI'
